--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>About — Campus Tools & Tips</title>
-  <meta name="description" content="About Campus Tools & Tips — helping Nigerian university students succeed with useful tools, tips, and resources." />
+  <meta name="description" content="Learn more about Campus Tools & Tips, a platform dedicated to helping Nigerian university students succeed through practical tools, study resources, and tips." />
   <style>
     :root{
       --primary1:#4a90e2;
@@ -81,7 +81,7 @@
 
   <header>
     <h1>📖 About Campus Tools & Tips</h1>
-    <p class="muted">Helping Nigerian university students excel through practical tools, study guides, and resources.</p>
+    <p class="muted">Supporting Nigerian university students with practical tools and academic resources.</p>
   </header>
 
   <nav>
@@ -96,40 +96,38 @@
 
     <section class="card">
       <h2>Our Mission</h2>
-      <p>Campus Tools & Tips is dedicated to empowering Nigerian university students with easy-to-use online tools, practical study tips, and curated academic resources tailored to the unique challenges of Nigerian tertiary education.</p>
-      <p>We aim to simplify your academic journey, helping you manage your time effectively, prepare well for exams, and access the right materials that boost your performance.</p>
+      <p>Campus Tools & Tips is dedicated to empowering Nigerian university students to achieve academic success through accessible, easy-to-use online tools, effective study strategies, and carefully curated educational resources.</p>
+      <p>We understand the unique challenges students face in Nigerian tertiary institutions, from managing irregular academic calendars to accessing quality study materials, and we strive to bridge these gaps.</p>
     </section>
 
     <section class="card">
-      <h2>Why We Created This Site</h2>
-      <p>Navigating university life in Nigeria can be challenging due to irregular schedules, limited access to quality materials, and lack of effective study planning. This site was created to fill those gaps by offering:</p>
+      <h2>What We Offer</h2>
       <ul>
-        <li>Simple, accurate tools like our CGPA calculator that reflect Nigerian university grading systems.</li>
-        <li>Practical study tips based on proven strategies and real student experiences.</li>
-        <li>Free downloadable planners and checklists to help you stay organized.</li>
-        <li>Guidance on where to legally find past questions, textbooks, and other academic resources.</li>
+        <li><strong>CGPA Calculator:</strong> An accurate, user-friendly tool tailored to Nigerian university grading systems.</li>
+        <li><strong>Study Tips:</strong> Proven strategies to enhance learning efficiency and exam preparedness.</li>
+        <li><strong>Resources:</strong> Guides on obtaining past questions, recommended study materials, and downloadable planners to help you organize your academic life.</li>
       </ul>
     </section>
 
     <section class="card">
       <h2>About the Creator</h2>
-      <p>Campus Tools & Tips is developed and maintained by Samson Ugboke, a Nigerian student and tech enthusiast passionate about education technology. Samson understands the struggles Nigerian students face and uses his skills to build practical solutions that help students succeed.</p>
-      <p>If you have suggestions, corrections, or resources to share, feel free to get in touch via the contact details below.</p>
+      <p>Campus Tools & Tips was created by Samson Ugboke, a passionate Nigerian student and developer focused on education technology. Samson builds practical solutions aimed at helping students overcome academic hurdles and succeed in their studies.</p>
+      <p>If you have suggestions, ideas, or want to contribute, feel free to reach out.</p>
     </section>
 
     <section class="card">
-      <h2>Contact & Feedback</h2>
-      <p>We welcome your feedback to improve the site and make it even more helpful.</p>
+      <h2>Contact Us</h2>
+      <p>We welcome your feedback, questions, and partnership inquiries.</p>
       <ul>
-        <li>Email: <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener">support@sampulse.github.io</a></li>
-        <li>GitHub: <a href="https://github.com/Sampulse" target="_blank" rel="noopener">https://github.com/Sampulse</a></li>
+        <li>Email: <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener noreferrer">support@sampulse.github.io</a></li>
+        <li>GitHub: <a href="https://github.com/Sampulse" target="_blank" rel="noopener noreferrer">https://github.com/Sampulse</a></li>
       </ul>
     </section>
 
   </div>
 
   <footer>
-    © 2025 Campus Tools & Tips — Built for Nigerian Students
+    © 2025 Campus Tools & Tips — Proudly Supporting Nigerian Students
   </footer>
 
 </body>
