--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy — Campus Tools & Tips</title>
-  <meta name="description" content="Privacy policy for Campus Tools & Tips — how we handle your data and protect your privacy." />
+  <meta name="description" content="Privacy policy for Campus Tools & Tips, ensuring your data is protected while using our CGPA calculator and educational resources." />
   <style>
     :root{
       --primary1:#4a90e2;
@@ -68,7 +68,6 @@
     h2{color:#0b3d91;margin-top:0}
     h3{color:#333}
     .muted{color:var(--muted)}
-    ul{margin-left:1.1rem}
 
     footer{background:#222;color:#fff;text-align:center;padding:14px;margin-top:20px;border-radius:8px}
 
@@ -80,8 +79,8 @@
 <body>
 
   <header>
-    <h1>🔒 Privacy Policy</h1>
-    <p class="muted">How Campus Tools & Tips protects your information and respects your privacy.</p>
+    <h1>🔒 Privacy Policy — Campus Tools & Tips</h1>
+    <p class="muted">How we protect your information and ensure a safe user experience.</p>
   </header>
 
   <nav>
@@ -89,6 +88,7 @@
     <a href="cgpa-calculator.html">CGPA Calculator</a>
     <a href="study-tips.html">Study Tips</a>
     <a href="resources.html">Resources</a>
+    <a href="about.html">About</a>
     <a href="privacy.html" class="active">Privacy</a>
   </nav>
 
@@ -96,37 +96,51 @@
 
     <section class="card">
       <h2>Information We Collect</h2>
-      <p>Campus Tools & Tips does not collect personal data such as your name, email, or location when you visit the site. We do not require user accounts or registrations.</p>
-      <p>The only data collected may come from Google AdSense or Google Analytics scripts embedded on the site to show relevant ads and monitor site usage. This data is managed by Google according to their privacy policies.</p>
+      <p>Campus Tools & Tips does not collect any personally identifiable information from users. Our CGPA calculator and resources are fully accessible without registration or login.</p>
+      <p>We use only essential technical cookies via GitHub Pages and Google Analytics (anonymous) to improve site performance and user experience.</p>
     </section>
 
     <section class="card">
-      <h2>Use of Cookies</h2>
-      <p>We do not place cookies on your device ourselves. However, third-party services like Google AdSense may use cookies to personalize ads and track user interactions. You can manage cookies through your browser settings.</p>
+      <h2>How We Use Cookies and Analytics</h2>
+      <p>We use Google Analytics in a privacy-friendly way that anonymizes user data. This helps us understand usage patterns and improve our tools and content without identifying individual users.</p>
+      <p>You can opt out of Google Analytics tracking via your browser settings or privacy extensions if desired.</p>
     </section>
 
     <section class="card">
-      <h2>Data Sharing & Security</h2>
-      <p>We do not share your personal information with any third parties. All data collected by third-party advertising or analytics services is subject to their own privacy terms.</p>
-      <p>Our website uses HTTPS to encrypt data transmitted between your browser and our server for your safety.</p>
+      <h2>Third-Party Services</h2>
+      <p>Our site may include links to third-party services such as Google Adsense for advertising. We do not share personal data with these services directly.</p>
+      <p>We encourage you to review the privacy policies of any third-party services you interact with through our site.</p>
     </section>
 
     <section class="card">
-      <h2>Your Choices</h2>
-      <p>You can choose to disable third-party cookies in your browser or use ad blockers if you prefer not to see personalized ads.</p>
-      <p>If you have questions about your data or privacy on this site, please contact us at <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener">support@sampulse.github.io</a>.</p>
+      <h2>Data Security</h2>
+      <p>We host this site securely on GitHub Pages using HTTPS encryption to protect data transmitted between your browser and our servers.</p>
+      <p>Since we don’t store personal data, risks related to data breaches are minimal.</p>
+    </section>
+
+    <section class="card">
+      <h2>Children's Privacy</h2>
+      <p>Campus Tools & Tips is intended for university students and adult learners. We do not knowingly collect information from children under 13 years of age.</p>
     </section>
 
     <section class="card">
       <h2>Changes to This Policy</h2>
-      <p>We may update this privacy policy occasionally. Changes will be posted on this page with the last updated date indicated here:</p>
-      <p><em>Last updated: August 2025</em></p>
+      <p>We may update this privacy policy occasionally to reflect changes in services or legal requirements. Please check this page periodically for updates.</p>
+    </section>
+
+    <section class="card">
+      <h2>Contact Us</h2>
+      <p>If you have questions about this privacy policy or how your data is handled, please contact us:</p>
+      <ul>
+        <li>Email: <a href="mailto:support@sampulse.github.io" target="_blank" rel="noopener noreferrer">support@sampulse.github.io</a></li>
+        <li>GitHub: <a href="https://github.com/Sampulse" target="_blank" rel="noopener noreferrer">https://github.com/Sampulse</a></li>
+      </ul>
     </section>
 
   </div>
 
   <footer>
-    © 2025 Campus Tools & Tips — Privacy Policy
+    © 2025 Campus Tools & Tips — Privacy & Your Security
   </footer>
 
 </body>
