--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
   <a href="cgpa-calculator.html">CGPA Calculator</a>
   <a href="study-tips.html">Study Tips</a>
   <a href="resources.html">Resources</a>
+  <a href="about.html">About</a>
+  <a href="privacy.html">Privacy</a>
 </nav>
+
 
 <section class="cta">
     <a href="#">📊 Calculate Your CGPA</a>
