--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -97,12 +97,15 @@
     <p class="small">Designed for Nigerian university grading (A=5 … F=0). Add semesters and courses, then calculate cumulative CGPA.</p>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cgpa-calculator.html" class="active">CGPA Calculator</a>
-    <a href="study-tips.html">Study Tips</a>
-    <a href="resources.html">Resources</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="cgpa-calculator.html">CGPA Calculator</a>
+  <a href="study-tips.html">Study Tips</a>
+  <a href="resources.html">Resources</a>
+  <a href="about.html">About</a>
+  <a href="privacy.html">Privacy</a>
+</nav>
+
 
   <div class="container">
     <!-- Controls -->
