--- a/study-tips.html
+++ b/study-tips.html
@@ -111,12 +111,15 @@
     <p class="muted">Practical, Nigeria-focused strategies to help you improve your grades and raise your CGPA.</p>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cgpa-calculator.html">CGPA Calculator</a>
-    <a href="study-tips.html" class="active">Study Tips</a>
-    <a href="resources.html">Resources</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="cgpa-calculator.html">CGPA Calculator</a>
+  <a href="study-tips.html">Study Tips</a>
+  <a href="resources.html">Resources</a>
+  <a href="about.html">About</a>
+  <a href="privacy.html">Privacy</a>
+</nav>
+
 
   <div class="container">
     <article class="card">
