--- a/resources.html
+++ b/resources.html
@@ -96,12 +96,15 @@
     <p class="muted">Curated downloads and practical guidance for Nigerian university students.</p>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cgpa-calculator.html">CGPA Calculator</a>
-    <a href="study-tips.html">Study Tips</a>
-    <a href="resources.html" class="active">Resources</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="cgpa-calculator.html">CGPA Calculator</a>
+  <a href="study-tips.html">Study Tips</a>
+  <a href="resources.html">Resources</a>
+  <a href="about.html">About</a>
+  <a href="privacy.html">Privacy</a>
+</nav>
+
 
   <div class="container">
 
