--- a/about.html
+++ b/about.html
@@ -84,13 +84,15 @@
     <p class="muted">Supporting Nigerian university students with practical tools and academic resources.</p>
   </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="cgpa-calculator.html">CGPA Calculator</a>
-    <a href="study-tips.html">Study Tips</a>
-    <a href="resources.html">Resources</a>
-    <a href="about.html" class="active">About</a>
-  </nav>
+ <nav>
+  <a href="index.html">Home</a>
+  <a href="cgpa-calculator.html">CGPA Calculator</a>
+  <a href="study-tips.html">Study Tips</a>
+  <a href="resources.html">Resources</a>
+  <a href="about.html">About</a>
+  <a href="privacy.html">Privacy</a>
+</nav>
+
 
   <div class="container">
 
