--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
   <a href="privacy.html">Privacy</a>
 </nav>
 
-
 <section class="cta">
-    <a href="#">📊 Calculate Your CGPA</a>
-    <a href="#">📚 Explore Study Tips</a>
+  <span>📊 Calculate Your CGPA</span>
+  <span>📚 Explore Study Tips</span>
 </section>
 
 <section class="features">
