--- a/index.html
+++ b/index.html
@@ -104,10 +104,21 @@
   <a href="privacy.html">Privacy</a>
 </nav>
 
-<section class="cta">
-  <span>📊 Calculate Your CGPA</span>
-  <span>📚 Explore Study Tips</span>
-</section>
+.cta {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 30px 0;
+  font-weight: bold;
+  color: #4a90e2; /* same color as links */
+}
+
+.cta span {
+  padding: 12px 20px;
+  border-radius: 8px;
+  background-color: #e1ecf9; /* subtle background to mimic button feel */
+}
+
 
 <section class="features">
     <div class="feature">
