--- a/index.html
+++ b/index.html
@@ -1,136 +1,336 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your ultimate resource hub for university students. Calculate CGPA, access study tips, and explore academic tools.">
-    <title>Campus Tools & Tips</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f6f9;
-            color: #333;
-        }
-        header {
-            background: linear-gradient(-45deg, #4a90e2, #50e3c2, #9013fe, #f5a623);
-            background-size: 400% 400%;
-            animation: gradientMove 12s ease infinite;
-            padding: 40px;
-            text-align: center;
-            color: white;
-        }
-        @keyframes gradientMove {
-            0% {background-position: 0% 50%;}
-            50% {background-position: 100% 50%;}
-            100% {background-position: 0% 50%;}
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-            animation: fadeIn 2s ease-in-out;
-        }
-        @keyframes fadeIn {
-            from {opacity: 0;}
-            to {opacity: 1;}
-        }
-        nav {
-            background-color: white;
-            padding: 10px;
-            text-align: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        nav a {
-            text-decoration: none;
-            color: #4a90e2;
-            margin: 0 15px;
-            font-weight: bold;
-        }
-        .cta {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 30px 0;
-        }
-        .cta a {
-            background-color: #4a90e2;
-            color: white;
-            padding: 12px 20px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .cta a:hover {
-            background-color: #357ABD;
-        }
-        .features {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            padding: 20px;
-        }
-        .feature {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            width: 300px;
-            text-align: center;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-        }
-        footer {
-            background: #222;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            margin-top: 40px;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="Nigerian University CGPA Calculator — multi-semester, accurate, mobile-friendly." />
+  <title>CGPA Calculator - Campus Tools & Tips</title>
+  <style>
+    :root{
+      --primary1: #4a90e2;
+      --primary2: #50e3c2;
+      --accent: #9013fe;
+      --warm: #f5a623;
+      --muted: #666;
+      --card-bg: #fff;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: Arial, sans-serif;
+      background:#f4f6f9;
+      color:#222;
+      -webkit-font-smoothing:antialiased;
+    }
+    header{
+      background: linear-gradient(-45deg, var(--primary1), var(--primary2), var(--accent), var(--warm));
+      background-size:400% 400%;
+      animation: gradientMove 12s ease infinite;
+      padding: 30px 20px;
+      color: white;
+      text-align:center;
+    }
+    @keyframes gradientMove{
+      0%{background-position:0% 50%}
+      50%{background-position:100% 50%}
+      100%{background-position:0% 50%}
+    }
+    header h1{margin:0;font-size:1.8rem}
+    header p{margin:6px 0 0;opacity:0.95}
+    nav{
+      background:#fff;
+      box-shadow:0 2px 4px rgba(0,0,0,0.06);
+      padding:10px 0;
+      text-align:center;
+    }
+    nav a{
+      color:var(--primary1);
+      margin:0 14px;
+      text-decoration:none;
+      font-weight:600;
+      font-size:0.95rem;
+    }
+    nav a.active{color:#111}
+    .container{max-width:1000px;margin:20px auto;padding:0 16px}
+    .panel{background:var(--card-bg);border-radius:10px;padding:18px;box-shadow:0 6px 18px rgba(15,23,42,0.06);margin-bottom:18px}
+    .controls{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-bottom:12px}
+    .btn{background:var(--primary1);color:#fff;padding:10px 14px;border-radius:8px;border:none;cursor:pointer;font-weight:700}
+    .btn.ghost{background:#fff;color:var(--primary1);border:1px solid rgba(74,144,226,0.18)}
+    .btn.warn{background:#f39c12}
+    .sem-header{display:flex;align-items:center;justify-content:space-between;gap:10px}
+    .sem-title{font-weight:700}
+    table{width:100%;border-collapse:collapse;margin-top:12px}
+    th,td{padding:10px;border:1px solid #e9eef4;text-align:center;font-size:0.95rem}
+    input[type="text"], input[type="number"], select{
+      width:100%;padding:8px;border:1px solid #dfe8f2;border-radius:6px;font-size:0.95rem;
+    }
+    .small{font-size:0.9rem;color:var(--muted)}
+    .results{display:flex;flex-wrap:wrap;gap:12px;margin-top:12px}
+    .result-box{flex:1;min-width:180px;background:#f7fbff;padding:12px;border-radius:8px;border:1px solid #e6f0ff}
+    .result-box strong{display:block;font-size:1.3rem;color:#0b3d91}
+    .actions{display:flex;gap:10px;margin-top:12px;flex-wrap:wrap}
+    .ad-placeholder{border:1px dashed #d0d7e0;padding:12px;border-radius:8px;text-align:center;color:#64748b;background:#fff}
+    footer{background:#222;color:#fff;padding:14px;text-align:center;margin-top:20px;border-radius:8px}
+    @media (max-width:700px){
+      header h1{font-size:1.4rem}
+      th,td{font-size:0.85rem}
+    }
+  </style>
 </head>
 <body>
 
-<header>
-    <h1>🎓 Campus Tools & Tips</h1>
-    <p>Your one-stop hub for university success!</p>
-</header>
+  <header>
+    <h1>🎓 Campus Tools & Tips — CGPA Calculator</h1>
+    <p class="small">Designed for Nigerian university grading (A=5 … F=0). Add semesters and courses, then calculate cumulative CGPA.</p>
+  </header>
 
-<nav>
-  <a href="index.html">Home</a>
-  <a href="cgpa-calculator.html">CGPA Calculator</a>
-  <a href="study-tips.html">Study Tips</a>
-  <a href="resources.html">Resources</a>
-  <a href="about.html">About</a>
-  <a href="privacy.html">Privacy</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cgpa-calculator.html" class="active">CGPA Calculator</a>
+    <a href="study-tips.html">Study Tips</a>
+    <a href="resources.html">Resources</a>
+  </nav>
 
-
-
-
-<section class="features">
-    <div class="feature">
-        <h3>🎯 Accurate CGPA Calculator</h3>
-        <p>Quickly calculate your semester or cumulative GPA.</p>
+  <div class="container">
+    <!-- Controls -->
+    <div class="panel">
+      <div style="display:flex;flex-wrap:wrap;gap:12px;align-items:center;justify-content:space-between">
+        <div>
+          <button class="btn" id="addSemesterBtn">+ Add Semester</button>
+          <button class="btn ghost" id="resetBtn">Reset All</button>
+        </div>
+        <div class="small">Grading: A=5 • B=4 • C=3 • D=2 • E=1 • F=0</div>
+      </div>
     </div>
-    <div class="feature">
-        <h3>📖 Study Hacks</h3>
-        <p>Discover effective study strategies that actually work.</p>
-    </div>
-    <div class="feature">
-        <h3>🛠 Student Tools</h3>
-        <p>Access planners, note templates, and research aids.</p>
-    </div>
-</section>
 
-<!-- Adsense space reserved -->
-<section style="text-align:center; margin: 30px 0;">
-    <!-- ADSENSE CODE WILL GO HERE LATER -->
-</section>
+    <!-- Semesters will be inserted here -->
+    <div id="semesters"></div>
 
-<footer>
-    <p>&copy; 2025 Campus Tools & Tips. All Rights Reserved.</p>
-</footer>
+    <!-- Results -->
+    <div class="panel">
+      <div class="results">
+        <div class="result-box">
+          <small class="small">Total Units</small>
+          <strong id="totalUnits">0</strong>
+        </div>
+        <div class="result-box">
+          <small class="small">Total Quality Points</small>
+          <strong id="totalQp">0</strong>
+        </div>
+        <div class="result-box">
+          <small class="small">Cumulative CGPA</small>
+          <strong id="cumCgpa">0.00</strong>
+        </div>
+      </div>
+
+      <div class="actions">
+        <button class="btn" id="calcBtn">Calculate CGPA</button>
+        <button class="btn ghost" id="downloadBtn">Download Result</button>
+        <button class="btn warn" id="helpBtn">How to use</button>
+      </div>
+
+      <div style="margin-top:12px" id="perSemesterResults"></div>
+
+    </div>
+
+    <div class="panel ad-placeholder small">Ad space — paste AdSense code here later (leave empty until you're approved)</div>
+
+  </div>
+
+  <footer>
+    © 2025 Campus Tools & Tips — Built for Students
+  </footer>
+
+<script>
+(function(){
+  const semestersEl = document.getElementById('semesters');
+  const addSemesterBtn = document.getElementById('addSemesterBtn');
+  const resetBtn = document.getElementById('resetBtn');
+  const calcBtn = document.getElementById('calcBtn');
+  const downloadBtn = document.getElementById('downloadBtn');
+  const helpBtn = document.getElementById('helpBtn');
+
+  const totalUnitsEl = document.getElementById('totalUnits');
+  const totalQpEl = document.getElementById('totalQp');
+  const cumCgpaEl = document.getElementById('cumCgpa');
+  const perSemesterResults = document.getElementById('perSemesterResults');
+
+  let semCount = 0;
+
+  function createSemester(title){
+    semCount++;
+    const semId = 'sem' + semCount;
+    const wrapper = document.createElement('div');
+    wrapper.className = 'panel';
+    wrapper.id = semId;
+    wrapper.innerHTML = `
+      <div class="sem-header">
+        <div>
+          <div class="sem-title">Semester ${semCount} &nbsp; <span class="small" id="${semId}-summary"></span></div>
+          <div class="small">Add your courses below (Course code, Units, Grade)</div>
+        </div>
+        <div style="display:flex;gap:8px">
+          <button class="btn ghost" data-action="addCourse">+ Add Course</button>
+          <button class="btn ghost" data-action="removeSemester">Remove</button>
+        </div>
+      </div>
+
+      <div style="overflow:auto;margin-top:10px">
+        <table>
+          <thead>
+            <tr>
+              <th style="width:40%">Course Code</th>
+              <th style="width:18%">Units</th>
+              <th style="width:18%">Grade</th>
+              <th style="width:18%">Quality Points</th>
+              <th style="width:6%"></th>
+            </tr>
+          </thead>
+          <tbody class="course-body"></tbody>
+        </table>
+      </div>
+    `;
+    semestersEl.appendChild(wrapper);
+
+    const addBtn = wrapper.querySelector('[data-action="addCourse"]');
+    const removeSemBtn = wrapper.querySelector('[data-action="removeSemester"]');
+    addBtn.addEventListener('click', ()=>{ addCourseRow(wrapper); updateAll(); });
+    removeSemBtn.addEventListener('click', ()=>{ wrapper.remove(); updateAll(); });
+
+    // add two initial rows
+    addCourseRow(wrapper);
+    addCourseRow(wrapper);
+  }
+
+  function addCourseRow(semEl, course='', units='', grade='A'){
+    const tbody = semEl.querySelector('.course-body');
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td><input type="text" class="course-code" placeholder="e.g. MTH101" value="${escapeHtml(course)}"></td>
+      <td><input type="number" min="0" step="1" class="units" placeholder="e.g. 3" value="${units}"></td>
+      <td>
+        <select class="grade">
+          <option value="5">A</option>
+          <option value="4">B</option>
+          <option value="3">C</option>
+          <option value="2">D</option>
+          <option value="1">E</option>
+          <option value="0">F</option>
+        </select>
+      </td>
+      <td class="qp">0</td>
+      <td><button class="btn ghost remove">×</button></td>
+    `;
+    tbody.appendChild(tr);
+    tr.querySelector('.grade').value = gradeToPoints(grade).toString();
+
+    tr.querySelector('.units').addEventListener('input', updateAll);
+    tr.querySelector('.grade').addEventListener('change', updateAll);
+    tr.querySelector('.remove').addEventListener('click', ()=>{ tr.remove(); updateAll(); });
+
+    updateAll();
+  }
+
+  function gradeToPoints(g){
+    const up = String(g).toUpperCase();
+    if(['A','B','C','D','E','F'].includes(up)){
+      const map = {A:5,B:4,C:3,D:2,E:1,F:0};
+      return map[up];
+    }
+    const n = parseFloat(g);
+    if (!isNaN(n)) return n;
+    return 0;
+  }
+
+  function updateAll(){
+    let totalUnits = 0;
+    let totalQp = 0;
+    perSemesterResults.innerHTML = '';
+    const semesterPanels = Array.from(semestersEl.children);
+    semesterPanels.forEach((semEl, idx)=>{
+      const semRows = Array.from(semEl.querySelectorAll('.course-body tr'));
+      let semUnits = 0;
+      let semQp = 0;
+      semRows.forEach(row=>{
+        const units = parseFloat(row.querySelector('.units').value) || 0;
+        const gp = parseFloat(row.querySelector('.grade').value) || 0;
+        const qp = units * gp;
+        row.querySelector('.qp').textContent = qp ? qp.toFixed(2).replace(/\.00$/,'') : '0';
+        semUnits += units;
+        semQp += qp;
+      });
+      const semSummary = semEl.querySelector(`#${semEl.id}-summary`);
+      semSummary.textContent = semUnits > 0 ? `Units: ${semUnits} • QP: ${semQp.toFixed(2).replace(/\.00$/,'')} • GPA: ${ (semUnits>0 ? (semQp/semUnits).toFixed(2) : '0.00') }` : '';
+      totalUnits += semUnits;
+      totalQp += semQp;
+
+      const box = document.createElement('div');
+      box.style.padding='8px';
+      box.style.borderBottom='1px dashed #eef5ff';
+      box.innerHTML = `<strong>Semester ${idx+1} GPA:</strong> ${ semUnits>0 ? (semQp/semUnits).toFixed(2) : '0.00' } &nbsp; <span class="small"> (Units: ${semUnits})</span>`;
+      perSemesterResults.appendChild(box);
+    });
+
+    totalUnitsEl.textContent = totalUnits;
+    totalQpEl.textContent = totalQp.toFixed(2).replace(/\.00$/,'');
+    const cum = (totalUnits > 0) ? (totalQp / totalUnits) : 0;
+    cumCgpaEl.textContent = cum.toFixed(2);
+  }
+
+  function downloadResult(){
+    updateAll();
+    const semPanels = Array.from(semestersEl.children);
+    const data = { timestamp: new Date().toISOString(), semesters: [] };
+    semPanels.forEach((semEl, idx)=>{
+      const rows = Array.from(semEl.querySelectorAll('.course-body tr'));
+      const sem = { semester: idx+1, courses: [] };
+      rows.forEach(r=>{
+        const course = r.querySelector('.course-code').value || '';
+        const units = parseFloat(r.querySelector('.units').value) || 0;
+        const gp = parseFloat(r.querySelector('.grade').value) || 0;
+        const qp = units * gp;
+        sem.courses.push({ course, units, gp, qp });
+      });
+      data.semesters.push(sem);
+    });
+    data.summary = {
+      totalUnits: parseFloat(totalUnitsEl.textContent) || 0,
+      totalQp: parseFloat(totalQpEl.textContent) || 0,
+      cumulativeCgpa: parseFloat(cumCgpaEl.textContent) || 0
+    };
+    const blob = new Blob([JSON.stringify(data,null,2)], {type: 'application/json'});
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'cgpa-result.json';
+    document.body.appendChild(a);
+    a.click();
+    a.remove();
+    URL.revokeObjectURL(url);
+  }
+
+  function escapeHtml(s){
+    return String(s).replace(/[&<>"']/g, function(m){ return {'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":"&#39;"}[m]; });
+  }
+
+  addSemesterBtn.addEventListener('click', ()=>{ createSemester(); });
+  resetBtn.addEventListener('click', ()=>{
+    if(confirm('Reset all semesters and courses?')){
+      semestersEl.innerHTML='';
+      semCount=0;
+      createSemester();
+      updateAll();
+    }
+  });
+  calcBtn.addEventListener('click', ()=>{ updateAll(); cumCgpaEl.scrollIntoView({behavior:'smooth',block:'center'}); });
+  downloadBtn.addEventListener('click', downloadResult);
+  helpBtn.addEventListener('click', ()=>{ alert('Add one or more semesters. For each semester add course rows, enter units and pick grade (A-F). Click "Calculate CGPA" to see semester GPAs and cumulative CGPA.'); });
+
+  // start with 1 semester
+  createSemester();
+  updateAll();
+})();
+</script>
 
 </body>
 </html>
-
