--- a/index.html
+++ b/index.html
@@ -95,12 +95,14 @@
     <p>Your one-stop hub for university success!</p>
 </header>
 
-<nav>
-    <a href="#">Home</a>
-    <a href="#">CGPA Calculator</a>
-    <a href="#">Study Tips</a>
-    <a href="#">Resources</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="cgpa-calculator.html">CGPA Calculator</a>
+    <a href="study-tips.html">Study Tips</a>
+    <a href="resources.html">Resources</a>
+    <a href="about.html">About</a>
+    <a href="privacy.html" class="active">Privacy</a>
+  </nav>
 
 <section class="cta">
     <a href="#">📊 Calculate Your CGPA</a>
