--- a/cgpa-calculator.html
+++ b/cgpa-calculator.html
@@ -86,9 +86,11 @@
 
   <nav>
     <a href="index.html">Home</a>
-    <a href="cgpa-calculator.html" class="active">CGPA Calculator</a>
+    <a href="cgpa-calculator.html">CGPA Calculator</a>
     <a href="study-tips.html">Study Tips</a>
     <a href="resources.html">Resources</a>
+    <a href="about.html">About</a>
+    <a href="privacy.html" class="active">Privacy</a>
   </nav>
 
   <div class="container">
