--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             margin-top: 40px;
         }
     </style>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-3253581979430606" crossorigin="anonymous"></script>
 </head>
 <body>
 
