--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-3253581979430606"
+     <head>
      crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
